--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@coinbase/wallet-mobile-sdk": "1.1.2",
+    "@reown/appkit-coinbase-wagmi-react-native": "1.2.1",
+    "@reown/appkit-auth-wagmi-react-native": "1.2.1",
+    "@reown/appkit-wagmi-react-native": "1.2.1",
+    "@react-native-clipboard/clipboard": "1.16.1",
+    "@walletconnect/react-native-compat": "2.18.0",
+    "react-native-mmkv": "2.12.2",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "1.24.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@reown/appkit-wagmi-react-native": "^1.2.0",
     "@tanstack/react-query": "^5.65.1",
-    "@walletconnect/react-native-compat": "^2.17.5",
     "expo": "~52.0.28",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.3",
@@ -48,8 +53,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "viem": "^2.22.17",
-    "wagmi": "^2.14.9"
+    "viem": "^2.22.22",
+    "wagmi": "^2.14.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
